[gd_scene load_steps=21 format=4 uid="uid://bwbybr7nyjlan"]

[ext_resource type="PackedScene" uid="uid://b4uyanguafauh" path="res://entities/player.tscn" id="1_5kiuu"]
[ext_resource type="Script" uid="uid://ddxuh5rejjynx" path="res://scene/game.gd" id="1_p1ry8"]
[ext_resource type="TileSet" uid="uid://ci6yocecub5y3" path="res://tiles/terrain.tres" id="2_33cqm"]
[ext_resource type="TileSet" uid="uid://ckf2afy4m5an6" path="res://tiles/decoration.tres" id="3_xwcet"]
[ext_resource type="PackedScene" uid="uid://cdtr6sp6pckop" path="res://entities/camera.tscn" id="5_xlg7c"]
[ext_resource type="Texture2D" uid="uid://dy5vygtus60gg" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/6 - Distant_trees.png" id="6_i6gbm"]
[ext_resource type="Texture2D" uid="uid://csvua1ns62b6r" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/5 - Tree_row_BG_2.png" id="7_ux4dc"]
[ext_resource type="Texture2D" uid="uid://cl7kan1wns2ye" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/4 - Tree_row_BG_1.png" id="8_jrd6n"]
[ext_resource type="Texture2D" uid="uid://bqoauu1hkkbiv" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/3 - Bottom_leaf_piles.png" id="9_jhlss"]
[ext_resource type="Texture2D" uid="uid://48lr4v8vyi2n" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/2 - Trees.png" id="10_ww6yf"]
[ext_resource type="Texture2D" uid="uid://itttp321tjbb" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/1 - Leaf_top.png" id="11_1it6f"]
[ext_resource type="Texture2D" uid="uid://dkqddwf7teqa2" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/6 - Distant_trees.PNG" id="12_pp3pk"]
[ext_resource type="Texture2D" uid="uid://cof722htmx47e" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/5 - Tree_row_BG_2.PNG" id="13_b8t8i"]
[ext_resource type="Texture2D" uid="uid://kictp40681q" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/4 - Tree_row_BG_1.PNG" id="14_355h4"]
[ext_resource type="Texture2D" uid="uid://bcghisbmlbhwb" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/3 - Bottom_leaf_piles.PNG" id="15_ca6q5"]
[ext_resource type="Texture2D" uid="uid://ci74tpo8khn0b" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/2 - Trees.PNG" id="16_yerfe"]
[ext_resource type="Texture2D" uid="uid://bdt25dxh1is4o" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/1 - Leaf_top.PNG" id="17_abp7u"]
[ext_resource type="PackedScene" uid="uid://nm82sifvd23i" path="res://entities/level_end.tscn" id="18_ux4dc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_he4o3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrd6n"]
size = Vector2(20, 180)

[node name="Game" type="Node2D"]
script = ExtResource("1_p1ry8")

[node name="Player" parent="." instance=ExtResource("1_5kiuu")]
position = Vector2(36, 141)

[node name="TileMapNormal" type="Node2D" parent="."]

[node name="Terrainormal" type="TileMapLayer" parent="TileMapNormal"]
tile_map_data = PackedByteArray("AAABAAoAAAAEAAQAAAACAAoAAAACAAMAAAADAAoAAAACAAMAAAAEAAoAAAACAAMAAAAFAAoAAAACAAMAAAAGAAoAAAACAAMAAAAHAAoAAAACAAMAAAAIAAkAAAADAAUAAAAIAAgAAAABAAMAAAAJAAgAAAACAAMAAAAKAAgAAAACAAMAAAALAAgAAAACAAMAAAAMAAgAAAACAAMAAAANAAgAAAACAAMAAAAOAAgAAAACAAMAAAAPAAgAAAACAAMAAAAIAAoAAAADAAMAAAABAAsAAAADAAUAAAABAAwAAAADAAUAAAABAA0AAAADAAYAAAACAA0AAAAEAAYAAAADAA0AAAAEAAYAAAAEAA0AAAAEAAYAAAAFAA0AAAAEAAYAAAAGAA0AAAAEAAYAAAAHAA0AAAAEAAYAAAAIAA0AAAAEAAYAAAAJAA0AAAAEAAYAAAAKAA0AAAAEAAYAAAALAA0AAAAEAAYAAAAMAA0AAAAEAAYAAAANAA0AAAAEAAYAAAAOAA0AAAAEAAYAAAAPAA0AAAAEAAYAAAAQAA0AAAAEAAYAAAAQAAwAAAAEAAUAAAAQAAsAAAAEAAUAAAAQAAoAAAAEAAUAAAAQAAkAAAAEAAUAAAAQAAgAAAAEAAEAAAANAAoAAAAEAAMAAAANAAkAAAAEAAMAAAAMAAkAAAAEAAMAAAALAAkAAAAEAAMAAAAKAAkAAAAEAAMAAAAJAAkAAAAEAAMAAAAJAAoAAAAEAAMAAAAJAAsAAAAEAAMAAAAIAAsAAAAEAAMAAAAHAAsAAAAEAAMAAAAGAAsAAAAEAAMAAAAFAAsAAAAEAAMAAAAEAAsAAAAEAAMAAAADAAsAAAAEAAMAAAACAAsAAAAEAAMAAAACAAwAAAAEAAMAAAADAAwAAAAEAAMAAAAEAAwAAAAEAAMAAAAFAAwAAAAEAAMAAAAGAAwAAAAEAAMAAAAHAAwAAAAEAAMAAAAIAAwAAAAEAAMAAAAJAAwAAAAEAAMAAAAKAAwAAAAEAAMAAAAKAAsAAAAEAAMAAAAKAAoAAAAEAAMAAAALAAoAAAAEAAMAAAALAAsAAAAEAAMAAAALAAwAAAAEAAMAAAAMAAwAAAAEAAMAAAAMAAsAAAAEAAMAAAAMAAoAAAAEAAMAAAANAAsAAAAEAAMAAAANAAwAAAAEAAMAAAAOAAwAAAAEAAMAAAAOAAsAAAAEAAMAAAAOAAoAAAAEAAMAAAAOAAkAAAAEAAMAAAAPAAkAAAAEAAMAAAAPAAoAAAAEAAMAAAAPAAsAAAAEAAMAAAAPAAwAAAAEAAMAAAARAAgAAAAEAAEAAAASAAgAAAAEAAEAAAATAAgAAAAEAAEAAAAUAAgAAAAEAAEAAAAVAAgAAAAEAAEAAAAWAAgAAAAEAAEAAAAXAAgAAAAEAAEAAAAYAAgAAAAEAAEAAAAZAAgAAAAEAAEAAAAaAAgAAAAFAAEAAAAaAAkAAAAFAAIAAAAaAAoAAAAFAAIAAAAaAAsAAAAFAAIAAAAaAAwAAAAFAAIAAAAaAA0AAAAFAAYAAAARAA0AAAAEAAYAAAASAA0AAAAEAAYAAAATAA0AAAAEAAYAAAAUAA0AAAAEAAYAAAAVAA0AAAAEAAYAAAAWAA0AAAAEAAYAAAAXAA0AAAAEAAYAAAAYAA0AAAAEAAYAAAAZAA0AAAAEAAYAAAAVAAoAAAAEAAUAAAAVAAkAAAAEAAUAAAAUAAkAAAAEAAUAAAATAAkAAAAEAAUAAAASAAkAAAAEAAUAAAARAAkAAAAEAAUAAAARAAoAAAAEAAUAAAARAAsAAAAEAAUAAAARAAwAAAAEAAUAAAASAAwAAAAEAAUAAAASAAsAAAAEAAUAAAASAAoAAAAEAAUAAAATAAoAAAAEAAUAAAATAAsAAAAEAAUAAAATAAwAAAAEAAUAAAAUAAwAAAAEAAUAAAAUAAsAAAAEAAUAAAAUAAoAAAAEAAUAAAAVAAsAAAAEAAUAAAAVAAwAAAAEAAUAAAAWAAwAAAAEAAUAAAAWAAsAAAAEAAUAAAAWAAoAAAAEAAUAAAAWAAkAAAAEAAUAAAAXAAkAAAAEAAUAAAAXAAoAAAAEAAUAAAAXAAsAAAAEAAUAAAAXAAwAAAAEAAUAAAAYAAwAAAAEAAUAAAAYAAsAAAAEAAUAAAAYAAoAAAAEAAUAAAAYAAkAAAAEAAUAAAAZAAkAAAAEAAUAAAAZAAoAAAAEAAUAAAAZAAsAAAAEAAUAAAAZAAwAAAAEAAUAAAAHAAkAAAAEAAQAAAAHAAgAAAAEAAQAAAAHAAcAAAAEAAQAAAAHAAYAAAAEAAQAAAAHAAUAAAAEAAQAAAAHAAQAAAAEAAQAAAAHAAMAAAAEAAQAAAAGAAMAAAAEAAQAAAAFAAMAAAAEAAQAAAAEAAMAAAAEAAQAAAADAAMAAAAEAAQAAAACAAMAAAAEAAQAAAABAAMAAAAEAAQAAAAAAAMAAAAEAAQAAAAAAAQAAAAEAAQAAAAAAAUAAAAEAAQAAAAAAAYAAAAEAAQAAAAAAAcAAAAEAAQAAAAAAAgAAAAEAAQAAAAAAAkAAAAEAAQAAAAAAAoAAAAEAAQAAAA=")
tile_set = ExtResource("2_33cqm")

[node name="Decoration" type="TileMapLayer" parent="TileMapNormal"]
tile_map_data = PackedByteArray("AAADAAkAAAABAAUAAAAFAAkAAAAOAAUAAAAFAAgAAAAOAAUAAAAFAAcAAAAOAAUAAAAFAAYAAAAOAAQAAAAGAAYAAAAPAAQAAAAHAAYAAAAPAAQAAAAIAAYAAAAPAAQAAAAJAAYAAAAQAAQAAAAJAAcAAAAQAAUAAAAKAAYAAAARAAQAAAALAAYAAAARAAQAAAAMAAYAAAARAAQAAAANAAYAAAASAAQAAAAEAAgAAAAJAAEAAAAMAAcAAAABAAUAAAANAAcAAAAQAAUAAAAPAAcAAAABAAUAAAAQAAYAAAABAAEAAAAQAAcAAAABAAUAAAASAAYAAAABAAEAAAAVAAUAAgAAAAAAAAAYAAYAAAABAAEAAAAZAAYAAAABAAEAAAAWAAcAAAADAAUAAAA=")
tile_set = ExtResource("3_xwcet")

[node name="TileMapCorrompido" type="Node2D" parent="."]

[node name="Terraincorruptd" type="TileMapLayer" parent="TileMapCorrompido"]
tile_map_data = PackedByteArray("AAABAAoAAAABAAMAAAACAAoAAAACAAMAAAADAAoAAAACAAMAAAAEAAoAAAACAAMAAAAFAAoAAAACAAMAAAAGAAoAAAACAAMAAAAHAAoAAAACAAMAAAAIAAkAAAADAAUAAAAIAAgAAAABAAMAAAAJAAgAAAACAAMAAAAKAAgAAAACAAMAAAALAAgAAAACAAMAAAAMAAgAAAACAAMAAAANAAgAAAACAAMAAAAOAAgAAAACAAMAAAAPAAgAAAACAAMAAAAIAAoAAAADAAMAAAABAAsAAAADAAUAAAABAAwAAAADAAUAAAABAA0AAAADAAYAAAACAA0AAAAEAAYAAAADAA0AAAAEAAYAAAAEAA0AAAAEAAYAAAAFAA0AAAAEAAYAAAAGAA0AAAAEAAYAAAAHAA0AAAAEAAYAAAAIAA0AAAAEAAYAAAAJAA0AAAAEAAYAAAAKAA0AAAAEAAYAAAALAA0AAAAEAAYAAAAMAA0AAAAEAAYAAAANAA0AAAAEAAYAAAAOAA0AAAAEAAYAAAAPAA0AAAAEAAYAAAAQAA0AAAAEAAYAAAAQAAwAAAAEAAUAAAAQAAsAAAAEAAUAAAAQAAoAAAAEAAUAAAAQAAkAAAAEAAUAAAAQAAgAAAAEAAEAAAANAAoAAAAEAAMAAAANAAkAAAAEAAMAAAAMAAkAAAAEAAMAAAALAAkAAAAEAAMAAAAKAAkAAAAEAAMAAAAJAAkAAAAEAAMAAAAJAAoAAAAEAAMAAAAJAAsAAAAEAAMAAAAIAAsAAAAEAAMAAAAHAAsAAAAEAAMAAAAGAAsAAAAEAAMAAAAFAAsAAAAEAAMAAAAEAAsAAAAEAAMAAAADAAsAAAAEAAMAAAACAAsAAAAEAAMAAAACAAwAAAAEAAMAAAADAAwAAAAEAAMAAAAEAAwAAAAEAAMAAAAFAAwAAAAEAAMAAAAGAAwAAAAEAAMAAAAHAAwAAAAEAAMAAAAIAAwAAAAEAAMAAAAJAAwAAAAEAAMAAAAKAAwAAAAEAAMAAAAKAAsAAAAEAAMAAAAKAAoAAAAEAAMAAAALAAoAAAAEAAMAAAALAAsAAAAEAAMAAAALAAwAAAAEAAMAAAAMAAwAAAAEAAMAAAAMAAsAAAAEAAMAAAAMAAoAAAAEAAMAAAANAAsAAAAEAAMAAAANAAwAAAAEAAMAAAAOAAwAAAAEAAMAAAAOAAsAAAAEAAMAAAAOAAoAAAAEAAMAAAAOAAkAAAAEAAMAAAAPAAkAAAAEAAMAAAAPAAoAAAAEAAMAAAAPAAsAAAAEAAMAAAAPAAwAAAAEAAMAAAARAAgAAAAEAAEAAAASAAgAAAAEAAEAAAATAAgAAAAEAAEAAAAUAAgAAAAEAAEAAAAVAAgAAAAEAAEAAAAWAAgAAAAEAAEAAAAXAAgAAAAEAAEAAAAYAAgAAAAEAAEAAAAZAAgAAAAEAAEAAAAaAAgAAAAFAAEAAAAaAAkAAAAFAAIAAAAaAAoAAAAFAAIAAAAaAAsAAAAFAAIAAAAaAAwAAAAFAAIAAAAaAA0AAAAFAAYAAAARAA0AAAAEAAYAAAASAA0AAAAEAAYAAAATAA0AAAAEAAYAAAAUAA0AAAAEAAYAAAAVAA0AAAAEAAYAAAAWAA0AAAAEAAYAAAAXAA0AAAAEAAYAAAAYAA0AAAAEAAYAAAAZAA0AAAAEAAYAAAAVAAoAAAAEAAUAAAAVAAkAAAAEAAUAAAAUAAkAAAAEAAUAAAATAAkAAAAEAAUAAAASAAkAAAAEAAUAAAARAAkAAAAEAAUAAAARAAoAAAAEAAUAAAARAAsAAAAEAAUAAAARAAwAAAAEAAUAAAASAAwAAAAEAAUAAAASAAsAAAAEAAUAAAASAAoAAAAEAAUAAAATAAoAAAAEAAUAAAATAAsAAAAEAAUAAAATAAwAAAAEAAUAAAAUAAwAAAAEAAUAAAAUAAsAAAAEAAUAAAAUAAoAAAAEAAUAAAAVAAsAAAAEAAUAAAAVAAwAAAAEAAUAAAAWAAwAAAAEAAUAAAAWAAsAAAAEAAUAAAAWAAoAAAAEAAUAAAAWAAkAAAAEAAUAAAAXAAkAAAAEAAUAAAAXAAoAAAAEAAUAAAAXAAsAAAAEAAUAAAAXAAwAAAAEAAUAAAAYAAwAAAAEAAUAAAAYAAsAAAAEAAUAAAAYAAoAAAAEAAUAAAAYAAkAAAAEAAUAAAAZAAkAAAAEAAUAAAAZAAoAAAAEAAUAAAAZAAsAAAAEAAUAAAAZAAwAAAAEAAUAAAA=")
tile_set = ExtResource("2_33cqm")

[node name="Decoration" type="TileMapLayer" parent="TileMapCorrompido"]
tile_map_data = PackedByteArray("AAAWAAcAAAADAAUAAAA=")
tile_set = ExtResource("3_xwcet")

[node name="Camera" parent="." instance=ExtResource("5_xlg7c")]

[node name="ParallaxBackgroundNormal" type="ParallaxBackground" parent="."]
layer = -74

[node name="6" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/6"]
texture_repeat = 2
texture = ExtResource("6_i6gbm")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="5" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/5"]
texture_repeat = 2
texture = ExtResource("7_ux4dc")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="4" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/4"]
texture_repeat = 2
texture = ExtResource("8_jrd6n")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="3" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/3"]
texture_repeat = 2
texture = ExtResource("9_jhlss")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="2" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/2"]
texture_repeat = 2
texture = ExtResource("10_ww6yf")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="1" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/1"]
texture_repeat = 2
texture = ExtResource("11_1it6f")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="ParallaxBackgroundCorrompido" type="ParallaxBackground" parent="."]
layer = -101

[node name="6" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/6"]
texture_repeat = 2
material = SubResource("CanvasItemMaterial_he4o3")
texture = ExtResource("12_pp3pk")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="5" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/5"]
texture_repeat = 2
texture = ExtResource("13_b8t8i")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="4" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/4"]
texture_repeat = 2
texture = ExtResource("14_355h4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="3" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/3"]
texture_repeat = 2
texture = ExtResource("15_ca6q5")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="2" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/2"]
texture_repeat = 2
texture = ExtResource("16_yerfe")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="1" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/1"]
texture_repeat = 2
texture = ExtResource("17_abp7u")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="LevelEnd" parent="." instance=ExtResource("18_ux4dc")]
position = Vector2(636, 153)
next_level = "forest"

[node name="CollisionShape2D" parent="LevelEnd" index="0"]
position = Vector2(-265, -63)
shape = SubResource("RectangleShape2D_jrd6n")

[editable path="LevelEnd"]
